yml filed modified

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@
 
 title: Leyth Adan
 description: Powered by Jekyll and GitHub Pages
-email: l.nguyen.paul@gmail.com
+email: leythadan@gmail.com
 
 menu:
 - {name: 'Projects', url: ''}
