--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -56,6 +56,7 @@ projects:
 - {name: 'Project Three', folder: 'proj-3', file: 'projects/proj-3.html'}
 - {name: 'Project Four', folder: 'proj-4', file: 'projects/proj-4.html'}
 - {name: 'Project Five', folder: 'proj-5', file: 'projects/proj-5.html'}
+- {name: 'Project Six', folder: 'proj-6', file: 'projects/proj-6.html'}
 
 #-------------------------------
 # Contact Section
