--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -57,6 +57,7 @@ projects:
 - {name: 'Project Four', folder: 'proj-4', file: 'projects/proj-4.html'}
 - {name: 'Project Five', folder: 'proj-5', file: 'projects/proj-5.html'}
 - {name: 'Project Six', folder: 'proj-6', file: 'projects/proj-6.html'}
+- {name: 'Project Seven', folder: 'proj-7', file: 'projects/proj-7.html'}
 
 #-------------------------------
 # Contact Section
