--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -58,6 +58,7 @@ projects:
 - {name: 'Project Five', folder: 'proj-5', file: 'projects/proj-5.html'}
 - {name: 'Project Six', folder: 'proj-6', file: 'projects/proj-6.html'}
 - {name: 'Project Seven', folder: 'proj-7', file: 'projects/proj-7.html'}
+- {name: 'Project Eight', folder: 'proj-8', file: 'projects/proj-8.html'}
 
 #-------------------------------
 # Contact Section
