--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -62,10 +62,9 @@ projects:
 # Contact Section
 
 social:
-- {icon: 'twitter', link: '#'}
-- {icon: 'instagram', link: '#'}
-- {icon: 'github', link: '#'}
-- {icon: 'linkedin', link: '#'}
-- {icon: 'envelope', link: 'mailto:#'}
+- {icon: 'twitter', link: 'https://twitter.com/leyth_'}
+- {icon: 'github', link: 'https://github.com/wehelie'}
+- {icon: 'linkedin', link: 'https://www.linkedin.com/in/leyth/'}
+- {icon: 'envelope', link: 'mailto:leythadan@gmail.com'}
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
