--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -45,7 +45,7 @@ about: >
 contact: >
   # Contact
 
-  You may contact me [through my email](mailto:l.nguyen.paul@gmail.com) or [tweet at me](https://twitter.com/intent/tweet?text=%40paululele) if you have any questions or would like to bring up any issues.
+  You may contact me [through my email](mailto:leythadan@gmail.com) or [tweet at me](https://twitter.com/intent/tweet?text=%40leyth_) if you have any questions or would like to bring up any issues.
 
 #-------------------------------
 # Work Section
