--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,13 +52,13 @@ contact: >
 
 projects:
 - {name: 'Hacker News Reader', folder: 'proj-1', file: 'projects/proj-1.html'}
-- {name: 'Project Two', folder: 'proj-2', file: 'projects/proj-2.html'}
-- {name: 'Project Three', folder: 'proj-3', file: 'projects/proj-3.html'}
-- {name: 'Project Four', folder: 'proj-4', file: 'projects/proj-4.html'}
-- {name: 'Project Five', folder: 'proj-5', file: 'projects/proj-5.html'}
-- {name: 'Project Six', folder: 'proj-6', file: 'projects/proj-6.html'}
-- {name: 'Project Seven', folder: 'proj-7', file: 'projects/proj-7.html'}
-- {name: 'Project Eight', folder: 'proj-8', file: 'projects/proj-8.html'}
+- {name: 'Twitter Unicode Bot', folder: 'proj-2', file: 'projects/proj-2.html'}
+- {name: 'Socket.IO — Chat', folder: 'proj-3', file: 'projects/proj-3.html'}
+- {name: 'User Interface (UI)', folder: 'proj-4', file: 'projects/proj-4.html'}
+- {name: 'Neighborhood Map', folder: 'proj-5', file: 'projects/proj-5.html'}
+- {name: 'UdaciFeeds: Feed Reader Testing', folder: 'proj-6', file: 'projects/proj-6.html'}
+- {name: 'Website Optimization', folder: 'proj-7', file: 'projects/proj-7.html'}
+- {name: 'Classic Arcade Game Clone ', folder: 'proj-8', file: 'projects/proj-8.html'}
 
 #-------------------------------
 # Contact Section
